# ina

./: .gitattributes  .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  build.gradle.kts  gradle.properties  renovate.json  renovate.json.license  rust-toolchain.toml  settings.gradle.kts
.cargo/: config.toml
.github/workflows/: ci.yaml  licensing.yaml  validate-gradle-wrapper.yaml
LICENSES/: LicenseRef-Defer.txt
android/: .gitignore  build.gradle.kts
android/src/androidTest/assets/: gcc-13.1.1  gcc-13.1.1-13.2.1.ina  gcc-13.1.1.license
android/src/androidTest/java/app/accrescent/ina/: PatchServiceTest.kt
android/src/main/: AndroidManifest.xml
android/src/main/java/app/accrescent/ina/: Patch.kt  PatchService.kt  Patcher.kt
cli/: Cargo.toml
cli/src/: main.rs
gradle/: libs.versions.toml  verification-metadata.xml
gradle/wrapper/: gradle-wrapper.properties
ina/: Cargo.toml  README.md
ina/src/: bsdiff.rs  diff.rs  header.rs  jni.rs  lib.rs  patch.rs
ina/src/sandbox/: common.rs  mod.rs  patch.rs
ina/tests/: create_and_apply_patch.rs
ina/tests/testdata/: README.md  gcc-13.2.1
sufsort/: Cargo.toml  LICENSE-SACA-K  README.md
sufsort/benches/: suffix_array.rs
sufsort/benches/testdata/: pizzachili-pitches.data  pizzachili-pitches.data.license
sufsort/src/: lib.rs  sacak.rs  suffix_array.rs
