# Copyright 2024 Logan Magee
#
# SPDX-License-Identifier: MPL-2.0

[package]
name = "cli"
authors = ["Logan Magee"]
edition = "2024"
license = "MPL-2.0"
publish = false

[[bin]]
name = "ina"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.82"
clap = { version = "4.5.4", features = ["derive"] }
ina = { path = "../ina" }
