# Copyright 2024 Logan Magee
#
# SPDX-License-Identifier: MPL-2.0

[package]
name = "ina-cli"
version = "0.1.0"
authors = ["Logan Magee"]
edition = "2024"
license = "MPL-2.0"
publish = false

[[bin]]
name = "ina"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.82"
clap = { version = "4.5.4", features = ["derive"] }
ina = { path = "../ina" }
