# SPDX-FileCopyrightText: © 2024 Logan Magee
#
# SPDX-License-Identifier: Apache-2.0

[package]
name = "ina-cli"
version = "0.1.0"
authors = ["Logan Magee"]
edition = "2024"
description = "Secure, robust, and efficient delta updates for executables"
repository = "https://github.com/accrescent/ina"
license = "Apache-2.0"

[[bin]]
name = "ina"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.82"
clap = { version = "4.5.4", features = ["derive"] }
ina = { path = "../ina", version = "0.1.0" }
