# Copyright 2024 Logan Magee
#
# SPDX-License-Identifier: MPL-2.0

[package]
name = "ina"
version = "0.1.0"
authors = ["Logan Magee"]
edition = "2024"
license = "MPL-2.0"
publish = false

[lib]
crate-type = ["cdylib", "lib"]

[dependencies]
bytemuck = { version = "1.15.0", optional = true }
byteorder = "1.5.0"
integer-encoding = "4.0.0"
jni = { version = "0.21.1", optional = true }
seccompiler = { version = "0.5.0", optional = true }
sufsort = { path = "../sufsort", optional = true }
zstd = { version = "0.13.1", default-features = false }

[target.'cfg(all(target_os = "android", target_endian = "little", any(target_arch = "aarch64", target_arch = "x86_64")))'.dependencies]
libc = { version = "0.2.154", optional = true }

[dev-dependencies]
blake3 = "1.5.1"

[features]
default = ["diff", "patch"]
diff = ["sufsort", "zstd/zstdmt"]
java-ffi = ["bytemuck", "jni"]
patch = []
sandbox = ["libc", "seccompiler"]

[lints.rust]
missing_docs = "warn"
unsafe_op_in_unsafe_fn = "warn"

[lints.clippy]
clone_on_ref_ptr = "warn"
undocumented_unsafe_blocks = "warn"
