# Copyright 2023 Logan Magee
#
# SPDX-License-Identifier: MPL-2.0

[package]
name = "sufsort"
authors = ["Logan Magee"]
edition = "2024"
license = "MPL-2.0"
publish = false

[dependencies]
bytemuck = "1.15.0"

[dev-dependencies]
criterion = "0.6.0"

[[bench]]
name = "suffix_array"
harness = false

[lints.rust]
missing_docs = "warn"

[lints.clippy]
missing_assert_message = "warn"
