# Copyright 2023 Logan Magee
#
# SPDX-License-Identifier: Apache-2.0

[package]
name = "sufsort"
version = "0.1.0"
authors = ["Logan Magee"]
edition = "2024"
description = "Suffix array construction for byte strings"
repository = "https://github.com/accrescent/ina"
license = "Apache-2.0"
exclude = ["benches/testdata"]

[dependencies]
bytemuck = "1.15.0"

[dev-dependencies]
criterion = "0.7.0"

[[bench]]
name = "suffix_array"
harness = false

[lints.rust]
missing_docs = "warn"

[lints.clippy]
missing_assert_message = "warn"
